src/main/metadata/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>R_Successful_Case_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Status, &apos;Successful&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Successful Case Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Successful_OB_Call__c</fullName>
        <formula>If( AND(Task_RecordType_Name__c==&apos;OB Call&apos;,ISPICKVAL(Activity_Status__c,&apos;Successful&apos;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Successful OB Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_isSuccessOBCall__c</fullName>
        <formula>if(AND(ISPICKVAL(Activity_Status__c,&apos;Successful&apos;),RecordType.Name = &apos;OB Call&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isSuccessOBCall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recording_ID__c</fullName>
        <description>This field could be useless, since we use visualforce page to show the voice record link.
noted by Lio on 10.28.2013</description>
        <label>Recording ID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Related_Task_Id__c</fullName>
        <description>Relate Interaction Log and Task.</description>
        <externalId>true</externalId>
        <label>*Related Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Solved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SMSBatchNumber__c</fullName>
        <description>When create a SMS Batch and run the batch, give batch value to task</description>
        <label>SMS Batch Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSTemplateID__c</fullName>
        <description>Save SMS template ID and give it to SMS reply</description>
        <label>SMS/MMS Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Content__c</fullName>
        <label>SMS Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Response_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for SMS. Judge whether SMS needs response</description>
        <label>SMS/MMS Response Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSI_Number__c</fullName>
        <label>SSI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSI_Status__c</fullName>
        <label>SSI Status</label>
        <picklist>
            <controllingField>Result__c</controllingField>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number Does Not Exist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unanswered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Shut Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Limitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number (Not the person&apos;s phone number within the address book)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unauthorized Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Contact Qualified Interviewee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Obstacle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview Reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejection During the Probing Question Phase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejection During the Main Part of the Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Politely Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Fully Participating in Car Purchase Process, Unable to Find Qualified Interviewee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inconsistent Car Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not the Car Purchase Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inconsistent Car Pick Up Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Status (Transfer to dealer)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SentTime__c</fullName>
        <label>Last Communication Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Call_Time__c</fullName>
        <description>SSI</description>
        <label>Start Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field could be useless, the value of which is the same as that of IB Status.
noted by Lio on 10.28.2013</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Result_Id__c</fullName>
        <description>Store related survey result id, used in Survey Result link.</description>
        <label>*Survey Result Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Result_Link__c</fullName>
        <formula>IF(OR( ISBLANK( Survey_Result_Id__c ), ISNULL(Survey_Result_Id__c)), &apos;&apos;, HYPERLINK(&quot;/&quot;+ Survey_Result_Id__c , &apos;View Survey Result&apos;) )</formula>
        <label>Survey Result Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_RecordType_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Task RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCID__c</fullName>
        <description>The UCID field is the Avaya Universal Call ID which is a value that uniquely identifies the call in the
Avaya Communication Manager over time and is often used for reporting purposes.</description>
        <label>UCID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueCampaignEmail__c</fullName>
        <description>Unique Email when generating eDM task.</description>
        <label>UniqueCampaignEmail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueCampaignGenerateTask__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UniqueCampaignGenerateTask</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UniqueCampaignMobile__c</fullName>
        <description>Every Campaign just contain de-dupilicated  mobile of contact</description>
        <label>UniqueCampaignMobile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueCode__c</fullName>
        <description>For Campaign purpose, will be sent together with SMS</description>
        <label>Unique Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Case_ID__c</fullName>
        <label>Vehicle/Case ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_Source__c</fullName>
        <label>Welcome Call Source</label>
        <picklist>
            <picklistValues>
                <fullName>Unsuccessful SSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Call</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eDM_Template_ID__c</fullName>
        <description>This ID is used for EP Interface.</description>
        <formula>Case(eDM_Type__c, &quot;Brochure&quot;, &quot;1096&quot;, &quot;Price List&quot;, &quot;1097&quot;, &quot;Brochure+Price List&quot;, &quot;1098&quot;, &quot;Error&quot;)</formula>
        <label>eDM Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eDM_Template__c</fullName>
        <label>eDM Template</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eDM_Type__c</fullName>
        <description>eDM Type with 3 types of values: Brochure, Price List	, Brochure+Price List. Auto from trigger. Used by eDM Template ID field.</description>
        <label>eDM Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Un_assinged_OB_Task</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>OB Call</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>OB TL,OB Supervisor</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.OB_Task</value>
        </filters>
        <label>All Un-assinged OB Task</label>
        <language>en_US</language>
        <sharedTo>
            <role>OB_Supervisor</role>
            <role>OB_TL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_SSI_Task</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Activity_Status__c</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>SSI Supervisor,SSI TL</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.SSI_Task</value>
        </filters>
        <label>All Unassigned SSI Task</label>
        <language>en_US</language>
        <sharedTo>
            <role>SSI_Supervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_Welcome_Call_Task</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>OB Supervisor</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Welcome_Call</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Unassigned Welcome Call Task</label>
        <language>en_US</language>
        <sharedTo>
            <role>OB_Supervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_smart_SSI_Task</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Executed_CSR__c</columns>
        <columns>Activity_Status__c</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>SSI Supervisor,SSI CSR</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.smart_SSI_Task</value>
        </filters>
        <label>All Unassigned smart SSI Task</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Unsuccessful_SMS_task</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>SMS_Response_Required__c</columns>
        <columns>SMS_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Status__c</field>
            <operation>notEqual</operation>
            <value>Success,Successful,成功</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.SMS</value>
        </filters>
        <label>All Unsuccessful SMS task</label>
        <language>en_US</language>
        <sharedTo>
            <role>IB_TL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Call_Being_QC</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.CALLDURATION</columns>
        <columns>QC_Link__c</columns>
        <columns>Generate_QC__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Generate_QC__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.IB_Call,Task.OB_Call</value>
        </filters>
        <label>My Call Being QC</label>
        <language>en_US</language>
        <sharedTo>
            <role>IB_CSR</role>
            <role>OB_CSR</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Called_Today_OB_Tasks</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>DUP_Number__c</columns>
        <columns>OB_Call_Times__c</columns>
        <columns>More_Than_2_OB_Times__c</columns>
        <columns>Activity_Resolution__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Last_OB_Call__c</columns>
        <columns>Activity_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.OB_Task,Task.Welcome_Call</value>
        </filters>
        <filters>
            <field>TASK.LAST_UPDATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>3. 今天所有外呼的OB任务</label>
        <language>en_US</language>
        <sharedTo>
            <role>OB_CSR</role>
            <role>OB_Supervisor</role>
            <role>OB_TL</role>
            <role>OM_OB</role>
            <role>QC_OB</role>
            <role>Training_OB</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Closed_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CustomerName__c</columns>
        <columns>HomeMobilePhone__c</columns>
        <columns>OfficePhone__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Activity_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.SSI_Task</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>TASK.LAST_UPDATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>My Closed SSI Task</label>
        <language>en_US</language>
        <sharedTo>
            <role>SSI_CSR</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Closed_Today_OB_Tasks</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>DUP_Number__c</columns>
        <columns>OB_Call_Times__c</columns>
        <columns>More_Than_2_OB_Times__c</columns>
        <columns>Activity_Resolution__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Last_OB_Call__c</columns>
        <columns>SentTime__c</columns>
        <columns>Activity_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.OB_Task,Task.Welcome_Call</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>TASK.LAST_UPDATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>2. 今天所有关闭的OB任务</label>
        <language>en_US</language>
        <sharedTo>
            <role>OB_CSR</role>
            <role>OB_Supervisor</role>
            <role>OB_TL</role>
            <role>OM_OB</role>
            <role>QC_OB</role>
            <role>Training_OB</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Closed_smart_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CustomerName__c</columns>
        <columns>HomeMobilePhone__c</columns>
        <columns>OfficePhone__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Activity_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.smart_SSI_Task</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>TASK.LAST_UPDATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>My Closed smart SSI Task</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_General_Task</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.General_Task</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>My General  Task</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_OB_Task</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Campaign_Name__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>DUP_Number__c</columns>
        <columns>OB_Call_Times__c</columns>
        <columns>More_Than_2_OB_Times__c</columns>
        <columns>Activity_Resolution__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Last_OB_Call__c</columns>
        <columns>Activity_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.OB_Task</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>notEqual</operation>
            <value>CAC OB CSR</value>
        </filters>
        <label>My Open OB Task</label>
        <language>en_US</language>
        <sharedTo>
            <role>OB_CSR</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_SSI_Task</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>OB_Call_Times__c</columns>
        <columns>More_Than_2_OB_Times__c</columns>
        <columns>Last_OB_Call__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Activity_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.SSI_Task</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>TASK.WHAT_NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Open SSI Task</label>
        <language>en_US</language>
        <sharedTo>
            <role>SSI_CSR</role>
            <role>SSI_TL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_smart_SSI_Task</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>OB_Call_Times__c</columns>
        <columns>More_Than_2_OB_Times__c</columns>
        <columns>Last_OB_Call__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Activity_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.smart_SSI_Task</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>TASK.WHAT_NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Open smart SSI Task</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Successful_Today_OB_Tasks</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>DUP_Number__c</columns>
        <columns>OB_Call_Times__c</columns>
        <columns>More_Than_2_OB_Times__c</columns>
        <columns>Activity_Resolution__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>Last_OB_Call__c</columns>
        <columns>Activity_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.OB_Task,Task.Welcome_Call</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>TASK.LAST_UPDATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Activity_Status__c</field>
            <operation>equals</operation>
            <value>Success,Successful</value>
        </filters>
        <label>1. 今天所有成功的OB任务</label>
        <language>en_US</language>
        <sharedTo>
            <role>OB_CSR</role>
            <role>OB_Supervisor</role>
            <role>OB_TL</role>
            <role>OM_OB</role>
            <role>QC_OB</role>
            <role>Training_OB</role>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>